# GireyBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  bot.py  docker-compose.yml  project_plan.md  pyproject.toml  secrets.example.yaml
.claude/: settings.local.json
config/: default.yaml
core/: __init__.py  agent.py  call_detector.py  config_loader.py  llm_client.py  memory.py
core/cogs/: general.py  skill_commands.py  soundboard.py  voice.py
core/detection/: __init__.py  detector.py  models.py
core/feedback/: checker.py  manager.py
core/llm/: __init__.py  base.py  ollama.py  openai.py
core/memory/: __init__.py  manager.py  models.py  schema.py
core/skills/: __init__.py  creator.py  executor.py  loader.py  management_actions.py  models.py  router.py
core/skills/templates/: skill_body.md
core/tools/: __init__.py  docker.py  local.py  ssh.py
data/: memory.db  persona.md  persona_backup.md
docs/: knowledge-ingest-tool-spec.md
plan/: persona_qwen3.5_setup.md
skills/docker-service/: SKILL.md
skills/minecraft-server/: SKILL.md
skills/summarize/: SKILL.md
src/main/: agent.py
src/main/cogs/: general.py  rag.py  skill_commands.py  soundboard.py
src/main/detection/: __init__.py  detector.py  models.py
src/main/feedback/: __init__.py  manager.py
src/main/memory/: __init__.py  manager.py  models.py  schema.py
src/main/rag/: __init__.py  embedder.py  ingest.py  retriever.py  store.py
src/main/skills/: __init__.py  creator.py  (+3 more)
src/shared/: config.py  logging.py
tools/ingest/: __main__.py  context.py  extractor.py  fetcher.py
(+23 files in other folders)
